# elfshield

./: .gitignore  Cargo.toml  LICENSE  README.md  readme.md
src/: checks.rs  cli.rs  constants.rs  main.rs  utils.rs
src/checks/: canary.rs  fortify.rs  helpers.rs  mod.rs  needed_libs.rs  nx.rs  pie.rs  relro.rs  rpath.rs  stripped.rs
src/tests/: fortify  fortify3  no_fortify  normal  test.c
