[package]
name = "elfshield"
version = "0.1.0"
edition = "2024"


description = "A command-line tool for analyzing ELF binary security mitigations."

readme = "README.md"

repository = "https://github.com/sagniksen31/elfshield"
homepage = "https://github.com/sagniksen31/elfshield"

license = "MIT"

keywords = [
    "elf",
    "security",
    "linux",
    "binary-analysis",
    "cli",
]

categories = [
    "command-line-utilities",
    "development-tools",
]

[dependencies]
goblin = "0.10.5"